<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015, Nordic Semiconductor
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
  ~
  ~ 2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the
  ~ documentation and/or other materials provided with the distribution.
  ~
  ~ 3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products derived from this
  ~ software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
  ~ LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
  ~ HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
  ~ LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
  ~ ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
  ~ USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->
<resources>

    <string name="app_name"> Burn Notice </string>
    <string name="device"> Status: </string>
    <string name="no_device"> No current device selected </string>
    <string name="select_device">Select a device</string>
    <string name="status">Status</string>
    <string name="llsWrite">LinkLossAlert</string>
    <string name="iasWrite">ImmediateAlert</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="no_ble_devices">No BLE devices found.</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Not connected</string>
    <string name="ready">Ready</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect"> Connect </string>
    <string name="notification"> Notification </string>
    <string name="notify"> Notify </string>
    <string name="increment"> Increment </string>
    <string name="reset"> Reset </string>
    <string name="send"> Send </string>
    <string name="main_message_top"> Your child has reached </string>
    <string name="current_exposure"> Current Exposure (in mW/cm^2): </string>
    <string name="exposure_percent"> 0 % </string>
    <string name="main_message_bottom"> of their daily \n recommended \n sun exposure. </string>
    <string name="unpair">unpair</string>
    <string name="pair">pair</string>
    <string name="RadioButton1">Alert level high</string>
    <string name="RadioButton2">Alert level mid</string>
    <string name="RadioButton3">Stop alerting</string>
    <string name="SystemId">SystemId</string>
    <string name="ModelNumber">ModelNumber</string>
    <string name="SerialNumber">SerialNumber</string>
    <string name="FirmwareRevision">FirmwareRevision</string>
    <string name="HardwareRevision">HardwareRevision</string>
    <string name="SoftwareRevision">SoftwareRevision</string>
    <string name="ManufactureName">ManufactureName</string>
    <string name="RegCertDataList">RegCertDataList</string>
    <string name="ManufactureId">    ManufactureId</string>
    <string name="BatteryLevel">    Battery Level</string>
    <string name="OrgId">    OrganizationId</string>
    <string name="Txpower">    Txpower Level</string>
    <string name="Noupdate">    No Update</string>
    <string name="ReadTxPower">ReadTxPower</string>
    <string name="high_alert">HIGH Alert triggered!</string>
    <string name="low_alert">LOW Alert triggered!</string>
    <string name="writeTxnoti">TxNoti</string>
    <string name="readRssi">Read Rssi Value</string>
    <string name="Readdummy">D Read</string>
    <string name="removeBond">Remove Bond</string>
    <string name="paired">paired</string>
    <string name="popup_title">Quit nRF UART</string>
    <string name="popup_message">Do you want to quit this Application?</string>
    <string name="popup_yes">YES</string>
    <string name="popup_no">NO</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="scan">Scan</string>
    <string name="cancel">Cancel</string>

    <string name="status_notification_title_template"> Burn Notice: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="status_notification_placeholder_text_template"> Your child is at risk of developing
        a sunburn. %1$s We recommend re-applying sunscreen or finding shade soon!
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Strings related to menu -->
    <string name="action_settings"> Settings </string>
    <string name="action_bluetooth"> Bluetooth </string>
    <string name="action_demo"> Demo </string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_wearing_sunscreen"> Are you wearing sunscreen? </string>
    <string name="pref_description_wearing_sunscreen"> Toggle on or off. </string>

    <string name="pref_title_display_name"> Child\'s name </string>
    <string name="pref_default_display_name"> Sun Shine </string>

    <string name="child_name_key"> CHILD-NAME </string>
    <string name="skin_type_key"> SKIN-TYPE </string>
    <string name="demo_key"> DEMO-KEY </string>


=======
    <!-- AG: Fitzpatrick Scale Skin Types -->
    <string name="skin_types"> Skin type </string>
    <string-array name="list_skin_types">
        <item> Type I: Always burns, doesn\'t tan </item>
        <item> Type II: Burns easily </item>
        <item> Type III: Tans after initial burn </item>
        <item> Type IV: Burns minimally, tans easily </item>
        <item> Type V: Rarely burns, tans well </item>
        <item> Type VI: Never burns, always tan </item>
    </string-array>

    <!-- AG: MED doses (mJ/cm^2), using conservative values according to http://www.bioline.org.br/pdf?dv09029 -->
    <string-array name="MEDs_by_skin_type">
        <item>15</item>
        <item>25</item>
        <item>30</item>
        <item>40</item>
        <item>60</item>
        <item>90</item>

    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>


    <!-- Example settings for Mode -->
    <string name="pref_header_mode"> Mode </string>
    <string name="pref_demo"> Demo mode </string>
    <string-array name="pref_mode_options">
        <item> Presentation </item>
        <item> Developer </item>
    </string-array>
    <string-array name="pref_mode_values">
        <item> 1 </item>
        <item> 0 </item>
    </string-array>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
