<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="@string/child_name_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name"
        android:visibility="visible" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!-- AG: Skin type -->
    <ListPreference
        android:id="@+id/skin_types"
        android:defaultValue="30"
        android:entries="@array/list_skin_types"
        android:entryValues="@array/MEDs_by_skin_type"
        android:key="@string/skin_type_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary=""
        android:title="@string/skin_types" />

</PreferenceScreen>
