<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nordicsemi.nrfUARTv2.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:checkable="false"
        android:enabled="true"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:visible="true"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_bluetooth"
        android:checkable="false"
        android:enabled="true"
        android:orderInCategory="100"
        android:title="@string/action_bluetooth"
        android:visible="true"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_demo"
        android:checkable="false"
        android:enabled="true"
        android:orderInCategory="100"
        android:title="@string/action_demo"
        android:visible="true"
        android:showAsAction="never" />

</menu>
