<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="73dp">

    <LinearLayout
        android:id="@+id/ProgressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:layout_weight="0.31"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/DeveloperLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_top"
            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/main_message_top" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp">

            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:progress="0"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/progressPercent"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/exposure_percent"
                android:textColor="@android:color/white" />

        </FrameLayout>

        <TextView
            android:id="@+id/textView_bottom"
            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/main_message_bottom" />

    </LinearLayout>

    <!-- AG: Device info -->

    <LinearLayout
        android:id="@+id/DeveloperLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="149dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/DeviceLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProgressLayout">

        <Button
            android:id="@+id/test_notif_button"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="12dp"
            android:text="@string/notify"
            android:visibility="invisible" />

        <Button
            android:id="@+id/test_increment_button"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="12dp"
            android:text="@string/increment"
            android:visibility="invisible" />

        <Button
            android:id="@+id/reset_button"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:padding="12dp"
            android:text="@string/reset"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/DeviceLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="224dp"
        android:layout_marginBottom="34dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProgressLayout">

        <TextView
            android:id="@+id/deviceLabel"
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device"
            android:gravity="center"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/deviceName"
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_device"
            android:visibility="invisible"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <!-- AG: Hidden. -->

    </LinearLayout>


    <!-- AG: Removed -->

    <RelativeLayout
        android:id="@+id/DataLayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="4.11"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteY="390dp">


        <!-- AG: Removed -->

        <EditText
            android:id="@+id/sendText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/sendButton"
            android:ems="10"
            android:enabled="false"
            android:fontFamily="1"
            android:lines="1"
            android:maxLength="20"
            android:maxLines="1"
            android:shadowRadius="1"
            android:visibility="gone" />

        <!-- AG: Removed -->

        <ListView
            android:id="@+id/listMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/sendButton"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:visibility="gone"></ListView>

        <!-- AG: Removed -->

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:enabled="false"
            android:text="@string/send"
            android:visibility="gone" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>